apps/choremane/overlays/dev/api-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: choremane
      app.kubernetes.io/component: api
  template:
    spec:
      containers:
        - name: api
          image: pipelinedave/choremane-api:v0.5.3
