apps/choremane/overlays/dev/frontend-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: choremane
      app.kubernetes.io/component: frontend
  template:
    spec:
      containers:
        - name: frontend
          image: pipelinedave/choremane-frontend:dev  # Dev-specific image
