apps/choremane/overlays/dev/frontend-ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
$patch: delete
