apps/choremane/overlays/dev/remove-frontend-ingress.yaml
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: remove-ingress
patch: |-
  - op: remove
    path: /spec/rules
target:
  kind: Ingress
  name: frontend-ingress
